# proxyswitch

./: .gitignore  package.json  pnpm-lock.yaml  tsconfig.json  vite.config.ts
.github/workflows/: ci.yml  release.yml
docs/: handoff-2026-05-27-v3.15.0.md  work-summary-2026-05-27.md  代理功能设计.md  开发交接.md  开发计划.md  项目说明.md
docs/user-manual/ja/2-providers/: 2.6-claude-desktop.md
docs/user-manual/zh/2-providers/: 2.1-add.md
src/: App.tsx  index.css
src-tauri/: Cargo.toml  tauri.conf.json  tauri.windows.no-updater.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: auto_launch.rs  claude_desktop_config.rs  codex_history_migration.rs  lib.rs  main.rs  provider_defaults.rs
src-tauri/src/commands/: mod.rs  proxyswitch.rs
src-tauri/src/database/dao/: providers.rs  providers_seed.rs
src-tauri/src/proxy/providers/: mod.rs
src-tauri/tests/: provider_service.rs
src/components/: AppSwitcher.tsx
src/components/providers/forms/: ClaudeDesktopProviderForm.tsx  ProviderForm.tsx
src/components/providers/forms/helpers/: opencodeFormUtils.ts
src/components/universal/: UniversalProviderFormModal.tsx
src/config/: claudeDesktopProviderPresets.ts  claudeProviderPresets.ts  codexProviderPresets.ts
src/i18n/locales/: en.json  ja.json  zh-TW.json  zh.json
tests/config/: providerPresetOrder.test.ts
tmp/docs-archive/: proxy-guide-zh.md  working-directory-plan.md
tmp/docs-archive/docs/release-notes/: v3.10.0-en.md  v3.10.0-ja.md  v3.10.0-zh.md  v3.11.0-en.md  v3.11.0-ja.md  v3.11.0-zh.md  v3.11.1-en.md  v3.11.1-ja.md  v3.11.1-zh.md  v3.12.0-en.md  v3.12.0-ja.md  v3.12.0-zh.md  v3.12.1-en.md  v3.12.1-ja.md  v3.12.1-zh.md  v3.12.2-en.md  v3.12.2-ja.md  v3.12.2-zh.md  v3.12.3-en.md  v3.12.3-ja.md  v3.12.3-zh.md  v3.13.0-en.md  v3.13.0-ja.md  v3.13.0-zh.md  v3.14.0-en.md  v3.14.0-ja.md  v3.14.0-zh.md  v3.14.1-en.md  v3.14.1-ja.md  v3.14.1-zh.md  v3.15.0-en.md  v3.15.0-ja.md  v3.15.0-zh.md  v3.6.0-en.md  v3.6.0-zh.md  v3.6.1-en.md  v3.6.1-zh.md  v3.7.0-en.md  v3.7.0-zh.md  v3.7.1-en.md  (+7 more)
tmp/docs-archive/docs/user-manual/: README.md
tmp/docs-archive/docs/user-manual/en/: README.md
tmp/docs-archive/docs/user-manual/en/1-getting-started/: 1.1-introduction.md  1.2-installation.md  1.3-interface.md  1.4-quickstart.md  1.5-settings.md
tmp/docs-archive/docs/user-manual/en/2-providers/: 2.1-add.md  2.2-switch.md  2.3-edit.md  2.4-sort-duplicate.md  2.5-usage-query.md  2.6-claude-desktop.md
tmp/docs-archive/docs/user-manual/en/3-extensions/: 3.1-mcp.md  3.2-prompts.md  3.3-skills.md  3.4-sessions.md  3.5-workspace.md
tmp/docs-archive/docs/user-manual/en/4-proxy/: 4.1-service.md  4.2-routing.md  4.3-failover.md  4.4-usage.md  4.5-model-test.md
tmp/docs-archive/docs/user-manual/en/5-faq/: 5.1-config-files.md  5.2-questions.md  5.3-deeplink.md  5.4-env-conflict.md
tmp/docs-archive/docs/user-manual/ja/: README.md
tmp/docs-archive/docs/user-manual/ja/1-getting-started/: 1.1-introduction.md  1.2-installation.md  1.3-interface.md  1.4-quickstart.md  1.5-settings.md
tmp/docs-archive/docs/user-manual/ja/2-providers/: 2.1-add.md  2.2-switch.md  2.3-edit.md  2.4-sort-duplicate.md  2.5-usage-query.md
tmp/docs-archive/docs/user-manual/ja/3-extensions/: 3.1-mcp.md  3.2-prompts.md  3.3-skills.md  3.4-sessions.md  3.5-workspace.md
tmp/docs-archive/docs/user-manual/ja/4-proxy/: 4.1-service.md  4.2-routing.md  4.3-failover.md  4.4-usage.md  4.5-model-test.md
tmp/docs-archive/docs/user-manual/ja/5-faq/: 5.1-config-files.md  5.2-questions.md  5.3-deeplink.md  5.4-env-conflict.md
tmp/docs-archive/docs/user-manual/zh/: README.md
tmp/docs-archive/docs/user-manual/zh/1-getting-started/: 1.1-introduction.md  (+4 more)
tmp/docs-archive/root/: CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  README_DE.md  README_JA.md  README_ZH.md  SECURITY.md  SUPPORT.md  session-manager.md
(+19 files in other folders)
