[package]
name = "proxyswitch"
version = "1.0.0"
description = "Desktop SSH SOCKS proxy switcher"
license = "MIT"
repository = "https://github.com/zzktz/proxyswitch"
edition = "2021"

[lib]
name = "proxyswitch_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.4.0", features = [] }

[dependencies]
auto-launch = "0.5"
dirs = "5.0"
log = "0.4"
reqwest = { version = "0.12", features = ["rustls-tls", "socks"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tauri = { version = "2.8.2", features = ["image-png"] }
tokio = { version = "1", features = ["rt-multi-thread"] }

[profile.release]
codegen-units = 1
lto = "thin"
opt-level = "s"
strip = "symbols"
